[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlarena"
version = "0.1.0"
description = "Python SDK for ML Arena - submit agents, check status, and view leaderboards"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
pandas = ["pandas>=1.0.0"]

[project.urls]
Homepage = "https://ml-arena.com"
Repository = "https://github.com/ml-arena/mlarena-sdk"
